--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,6 @@ version: "3.9"
 
 services:
 
-  # zookeeper:
-  #   image: confluentinc/cp-zookeeper:7.5.0
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_TICK_TIME: 2000
-
-  # kafka:
-  #   image: confluentinc/cp-kafka:7.5.0
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - "9092:9092"
-  #   environment:
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
   redpanda:
     image: redpandadata/redpanda:latest
     container_name: redpanda
@@ -72,28 +54,35 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
 
-  # rabbitmq:
-  #   image: rabbitmq:3-management
-  #   ports:
-  #     - "5672:5672"
-  #     - "15672:15672"
-  #   environment:
-  #     RABBITMQ_DEFAULT_USER: guest
-  #     RABBITMQ_DEFAULT_PASS: guest
+  nexus:
+    container_name: nexus
+    build: ./nexus
+    ports:
+      - "8081:8081"
+    volumes:
+      - nexus-data:/nexus-data
+
+  maven-uploader:
+    image: maven:3.9.9-eclipse-temurin-21
+    depends_on:
+      - nexus
+    volumes:
+      - ./services/common-data:/workspace/common-data
+      - ./config:/scripts
+      - nexus-data:/nexus-data:ro
+    entrypoint: ["/bin/bash", "/scripts/upload-common.sh"]
 
   tesseract-service:
     build:
       context: .
       dockerfile: services/Tesseract/Dockerfile
     container_name: tesseract-service
-    environment:
-      SPRING_RABBITMQ_HOST: rabbitmq
-      SPRING_RABBITMQ_PORT: 5672
     volumes:
       - ./testing:/app/images
     ports:
-      - "8010:8080"
+      - "8082:8082"
 
 volumes:
   pgdata:
   grafana-data:
+  nexus-data:
