--- a/services/store-service/src/main/resources/application.yml
+++ b/services/store-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8084
+  port: 8085
 
 spring:
   profiles:
@@ -17,10 +17,27 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
+  # PostgreSQL datasource configuration
+  datasource:
+    username: user
+    password: password
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc.lob.non_contextual_creation: true
+        temp:
+          use_jdbc_metadata_defaults: false
+        ddl-auto: update
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
 docstream:
   topics:
-    input: validated-documents
-    output: store-documents
+    input: store-documents
 
 management:
   endpoints:
