--- a/services/common-data/pom.xml
+++ b/services/common-data/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.docstream</groupId>
     <artifactId>common-data</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>common-data</name>
     <description>Common data for DocStream</description>
     <packaging>jar</packaging>
@@ -56,10 +56,26 @@
         </plugins>
     </build>
 
-    <distributionManagement>
-        <repository>
-            <id>internal</id>
-            <url>http://nexus:8081/repository/maven-snapshots/</url>
-        </repository>
-    </distributionManagement>
+    <profiles>
+        <profile>
+            <id>local</id>
+            <distributionManagement>
+                <repository>
+                    <id>internal</id>
+                    <url>http://localhost:8081/repository/maven-snapshots/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+
+        <profile>
+            <id>docker</id>
+            <distributionManagement>
+                <repository>
+                    <id>internal</id>
+                    <url>http://nexus:8081/repository/maven-snapshots/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
 </project>
