--- a/services/parser-service/src/main/resources/application.yml
+++ b/services/parser-service/src/main/resources/application.yml
@@ -3,14 +3,16 @@ server:
 
 #spring:
 #  rabbitmq:
-#    host: localhost
-#    port: 5672
+#    host: ${SPRING_RABBITMQ_HOST:localhost}
+#    port: ${SPRING_RABBITMQ_PORT:5672}
 #    username: guest
 #    password: guest
 
 spring:
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
   kafka:
-    bootstrap-servers: localhost:9092
+    #    bootstrap-servers: host.docker.internal:9092
     consumer:
       group-id: ocr-consumer-group
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -18,7 +20,6 @@ spring:
       properties:
         spring.json.trusted.packages: "*"
         spring.json.value.default.type: com.docstream.commondata.dto.DocumentProcessingEvent
-        spring.json.use.type.headers: false # Omite las cabeceras, entre ellas type, que indica una ruta distinta para DocumentProcessingEvent
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
